# i3-ws-rename

./: .gitignore  .ocamlformat  .ocamlinit  README.md  dune  dune-project  i3-ws-rename.code-workspace  i3-ws-rename.opam  ws-rename.opam
glib/: dune  glib.ml
i3ipc/: dune  i3ipc.ml  i3ipc.mli
pulse/: dune  pulse.ml
src/: case_fan_leds.ml  clock.ml  conf.ml  constants.ml  cpu.ml  disk_usage.ml  dualsense_battery.ml  dune  fa_icons.ml  game_mode.ml  i3_status.ml  i3_ws_rename.ml  i3bar_protocol.ml  k10_temp.ml  load_avg.ml  lwt_module.ml  memory.ml  modules_inventory.ml  nVME_temp.ml  otp.ml  path_exists.ml  reporter.ml  sSD_temp.ml  spotify.ml  spotify_client.ml  spotify_client.mli  spotify_interfaces.ml  spotify_interfaces.mli  unix_ext.ml  unix_ext_stubs.c  utils.ml  volume.ml  vpn_status.ml  whatsmyip.ml  ws_rename.ml
src/base32/: base32.ml  dune  radix_n.ml  seq.ml
src/clnp/: animation.ml  corsair_Lighting_Node_Pro.ml  dune
src/lwt_pipe/: dune
