(lang dune 3.7)

(name ws-rename)

(version 14)

(generate_opam_files true)

(authors "Paolo Donadeo")
(bug_reports "https://github.com/pdonadeo/i3-ws-rename/issues")
(homepage "https://github.com/pdonadeo/i3-ws-rename")
(license ISC)
(maintainers "paolo@donadeo.net")
(source (uri git+https://github.com/pdonadeo/i3-ws-rename))

(package
 (name ws-rename)
 (synopsis "Renames i3/Sway workspaces using Font Awesome")
 (description "Renames i3/Sway workspaces using Font Awesome")
 (homepage https://gitlab.4sigma.it/pdonadeo/mare-magnum-injector)
 (depends
  (dune (= 3.7.0))
  (cryptokit (= 1.18))
  (lwt_ppx (= 2.1.0))
  (cohttp-lwt-unix (= 5.0.0))
  (ppx_deriving_yojson (= 3.6.1))
  (batteries (= 3.6.0))
  (obus (= 1.2.3))
  (lwt_glib (= 1.1.1))
  (ctypes-foreign (= 0.18.0))
  (color (= 0.2.0))
  (usb (= 1.3.1))
  (lwt_ssl (= 1.2.0))
  (re2 (= v0.15.0))

  (utop (and :dev (= 2.11.0)))
  (merlin (and :dev (= 4.8-414)))
  (ocp-indent (and :dev (= 1.8.1)))
  (ocp-index (and :dev (= 1.3.4)))
  (ocamlformat (and :dev (= 0.25.1)))
  (odoc (and :dev (= 2.2.0)))
  (odig (and :dev (= 0.0.8)))
  (ocaml-lsp-server (and :dev (= 1.15.1-4.14)))
 )
)
