opam-version: "2.0"
name: "i3-ws-rename"
version: "1.7.14"
synopsis: "Renames i3 workspaces using Font Awesome and handle status"
description: "
TODO
"
maintainer: "Paolo Donadeo <p.donadeo@gmail.com>"
authors: "Paolo Donadeo <p.donadeo@gmail.com>"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-j" jobs "-p" name "@install"]
  ["dune" "build" "@compress"]
]
dev-repo: "git+https://github.com/pdonadeo/i3-ws-rename.git"
post-messages: [
    "Program installed in %{bin}%/i3-ws-rename"
    {success & !user-setup:installed}
]
depends: [
    "lwt"
    "fmt"
    "logs"
    "ppx_deriving_yojson"
    "i3ipc"
    "uutf"
    "batteries"
    "obus"
    "lwt_glib"
    "ctypes"
    "ctypes-foreign"
    "ppx_regexp"
    "dune" { build }
    "merlin" { build }
    "ocp-indent" { build }
    "utop" { build }
]
homepage: "https://github.com/pdonadeo/i3-ws-rename"
bug-reports: "https://github.com/pdonadeo/i3-ws-rename/issues"
