(executable
 (name i3_ws_rename)
 (modules
  i3_ws_rename
  conf
  fa_icons
  constants
  utils
  reporter)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson ppx_deriving.show))
 (libraries
  i3ipc
  cmdliner
  lwt
  logs.fmt
  fmt
  batteries
  str
  malloc))

(rule
 (alias compress)
 (action
  (run upx i3_ws_rename.exe)))

(install
 (section bin)
 (package i3-ws-rename)
 (files
  (i3_ws_rename.exe as i3-ws-rename)))
