(executable
 (name ws_rename)
 (modules
  ws_rename
  conf
  fa_icons
  constants
  utils
  reporter)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson ppx_deriving.show))
 (libraries
  i3ipc
  cmdliner
  lwt
  logs.fmt
  fmt
  batteries
  str
  malloc
  re2))

(rule
 (alias compress)
 (action
  (run upx ws_rename.exe)))

(install
 (section bin)
 (package ws-rename)
 (files
  (ws_rename.exe as ws-rename)))
